Add isCardInWallet method

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,9 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
+# IDEs
+.idea/
+
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
